MDEV-7024: Assertion `! is_set()' failed in Diagnostics_area::set_eof_status on executing ANALYZE SELECT via PS

select_send::is_result_interceptor() should return FALSE because it return results to the client.